deployments/apps/assessment_api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: assessment-api-http-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    #nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    #nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  rules:
  - host: assessment-api-qa.simpleonlinehealthcare.co.uk
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: assessment-api-qa
            port:
              number: 80
